@@ -1,6 +1,15 @@
 2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp: Minor
+	  changes using EcmaUtils.
+	* EcmaUtils/MyClass.cs, EcmaUtils/EcmaUtils.mdp,
+	  EcmaUtils/EcmaReader.cs: Initial implementation of EcmaReader class
+	  that handles the reading of the XML documentation.
+	* EcmaUtils/AssemblyInfo.cs: Assembly Info for the EcmaUtils library.
+
+2007-06-13  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp: Minor
 	  changes.
 
 2007-06-12  Hector E. Gomez Morales <hectoregm@gmail.com> 
